--- a/style.css
+++ b/style.css
@@ -165,3 +165,20 @@ hr {
 	color: #000;
 	padding: 0;
 }
+
+.print-button {
+	margin-left: 45%;
+	padding: 6px;
+	width: 100px;
+	color: #fff;
+	outline: none;
+	background: #0B366B;
+	border: none;
+	cursor: pointer;
+	border-radius: 20px;
+}
+.declaration-info {
+	font-size: 14px;
+	text-align: center;
+	margin-bottom: 30px;
+}
